Bug 153192 - FILEOPEN RTF Read-only protection not imported
Summary: FILEOPEN RTF Read-only protection not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.1 inRelease...
Keywords: filter:rtf
Depends on:
Blocks: RTF Read-Only
  Show dependency treegraph
 
Reported: 2023-01-24 23:32 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-06 09:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (42.05 KB, application/msword)
2023-01-24 23:32 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word 2016 (35.84 KB, image/png)
2023-01-24 23:32 UTC, Gabor Kelemen (Collabora)
Details
The example file in Writer (49.10 KB, image/png)
2023-01-24 23:32 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-01-24 23:32:13 UTC
Created attachment 184883 [details]
Example file from Word

Attached RTF file has the Read-only protection enabled in Word, and one can not edit it until the protection is removed.
In Writer the file is writable.

1. Open attached file

You can instantly edit it, without going to Edit - Edit mode.
In Word you need to go to the Restrict Editing sidebar and press Stop Protection (there is no password on this file).

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-01-24 23:32:35 UTC
Created attachment 184884 [details]
The example file in Word 2016
Comment 2 Gabor Kelemen (Collabora) 2023-01-24 23:32:56 UTC
Created attachment 184885 [details]
The example file in Writer
Comment 3 Xisco Faulí 2023-01-25 09:56:08 UTC
reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81ced283de2d0da377225afeb589b793716238bd
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Xisco Faulí 2023-01-25 09:57:44 UTC
OTOH, if I save the document to DOCX in Word, the document can't be edited in LibreOffice
Comment 5 Commit Notification 2025-02-05 10:27:53 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d723103ff8404ddadb3314dd3b67439602799d6c

tdf#153192 support read protection in RTF documents

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-07 12:09:03 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4d21c1cc64c8dca5056d6334f0d1bf425b1b70a6

tdf#153192 support read protection in RTF documents

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.