tdf#153192 support read protection in RTF documents

The keyword \readprot sets the document to read-only mode.

Change-Id: Idef47e9f93d3891d491cada18a9646b9f1b56cb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179826
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit d723103ff8404ddadb3314dd3b67439602799d6c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181151
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>